--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -620,14 +620,14 @@
 
   /* Grid */
 
-.container {
+  .container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: auto;
     column-gap: var(--space-sm);
     width: min(1280px, 100vw - 2rem);
     margin-inline: auto;
-    margin-block: var(--space-xxl) var(--space-xl);
+    margin-block: var(--space-xl) var(--space-xl);
   }
 
   /* fonts */
@@ -664,11 +664,11 @@
     text-decoration: underline 1px solid var(--black);
   }
 
-p {
-    font-family: var(--regular);
-    font-size: var(--step-0);
-    color: var(--black);
-}
+  p {
+      font-family: var(--regular);
+      font-size: var(--step-0);
+      color: var(--black);
+  }
 
 /* main */
 
@@ -676,15 +676,30 @@ p {
     height: 100svh;
     justify-items: center;
     margin-block-end: auto;
-    & figure {
+    & .swiper {
         grid-column: 1/12;
         grid-row: 1;
         height: 50svh;
-        & img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            aspect-ratio: 16/9;
+        width: 100%;
+        & .swiper-button-next,
+          .swiper-button-prev {
+          color: var(--white);
+        }
+        & figure {
+          height: 100%;
+          width: 100%;
+          & .left {
+            object-position: left bottom;
+          }
+          & .right {
+            object-position: right;
+          }
+          & img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              aspect-ratio: 16/9;
+          }
         }
     }
     & h1 {
@@ -723,7 +738,7 @@ p {
 
 p { 
 grid-column: 3/-1;
-grid-row: 1;
+margin-block-end: var(--space-md);
 }
 
 .divider {
@@ -742,7 +757,7 @@ grid-row: 1;
 
 @media only screen and (min-width: 600px) {
     .hero {
-        & figure {
+        & .swiper {
             height: 75svh;
         }
         & h1 {
@@ -751,6 +766,7 @@ grid-row: 1;
         & h2 {
             grid-column: 2/12;
             text-align: center;
+            font-size: var(--step-1);
         }
         & nav {
             grid-column: 2/12;
@@ -760,13 +776,15 @@ grid-row: 1;
                 & span {
                     display: block;
                 }
+                & a {
+                  font-size: var(--step-2);
+                }
             }
         }
     }
 
     p { 
         grid-column: 2/12;
-        grid-row: 1;
         }
 
 }
