--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -675,6 +675,7 @@
       font-family: var(--regular);
       font-size: var(--step-0);
       color: var(--black);
+      line-height: var(--body-line-height);
   }
 
 /* main */
